# fastapi-mysql-base

./: Dockerfile  Dockerfile.devlop  startup.sh
app/: crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py
app/alembic/: env.py
app/alembic/versions/: 32559ddbae52_create_word_mean_table.py  41e3e65e9e43_updatee_mean_table_tweeted_at.py  501ace3d7954_create_user_timestamp_table.py  5dfdeab8892f_updatee_word_table_tweeted_at.py  ddf2c33ab03b_create_user_table.py
app/app/: main.py
app/app/crud/: __init__.py  mean.py  user.py  word.py
app/app/db/: base.py
app/app/models/: __init__.py  mean.py  user.py  word.py
app/app/schemas/: __init__.py  mean.py  user.py  word.py
