[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Yamane <candoanything1031@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
SQLAlchemy = "^1.3.23"
uvicorn = {extras = ["standard"], version = "^0.13.3"}
PyMySQL = "^1.0.2"
alembic = "^1.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
